tests/baselines/reference/parserThrowStatement1.d.errors.txt
parserThrowStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserThrowStatement1.d.ts(1,7): error TS2304: Cannot find name 'e'.


==== parserThrowStatement1.d.ts (2 errors) ====
    throw e;
    ~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
          ~
!!! error TS2304: Cannot find name 'e'.